--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaiwen Tao's Personal Website</title>
+    <title>Personal Website</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="Swordfinger.png">
 </head>
@@ -24,7 +24,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>A brief introduction about myself, including interests, career goals, etc.</p>
+        <p>My name is Kevin Tao. I am a university student majoring in Computing Science in SFU, passionate about learning and continuously improving myself. I am proficient in Python and C++ programming and have strong communication and teamwork skills. I pay attention to detail, take initiative, and excel at problem-solving and adapting to dynamic work environments.</p>
         <img src="profile.jpg" alt="Profile Picture">
     </section>
 
@@ -38,17 +38,24 @@
 
     <section id="skills">
         <h2>Skills</h2>
-        <p>List of programming languages, tech stacks, and frameworks I'm proficient in.</p>
+        <p>I have experience in programming with C++ and Python. Additionally, I have achieved an IELTS score of 7 and have received first-place awards in microcontroller competitions as well as participated in various programming and mathematics competitions.</p>
     </section>
 
     <section id="experience">
         <h2>Work Experience</h2>
-        <p>Details about my internship or professional work experience.</p>
+        <p>From 2019 to 2021, I worked as a Hardware Processing Specialist at BC Tech in Vancouver, British Columbia, Canada. My responsibilities included:</p>
+        <ul>
+            <li>Managing and coordinating project progress to ensure timely delivery of results.</li>
+            <li>Collaborating closely with team members to solve technical challenges.</li>
+            <li>Participating in hardware product development and testing to improve product quality and user experience.</li>
+        </ul>
+        <p>During my time at BC Tech, I gained valuable experience in hardware and computing, enhancing my communication and problem-solving skills while adapting to a fast-changing work environment.</p>
     </section>
 
     <section id="education">
         <h2>Education</h2>
-        <p>Details about my school, major, and degree.</p>
+        <p>Currently pursuing a Bachelor of Science degree in Computer Science at Simon Fraser University (2022-2026), located in Vancouver, British Columbia, Canada.</p>
+        <p>Graduated from Moscrop Secondary School (2016-2022), also in Vancouver, British Columbia, Canada.</p>
     </section>
 
     <section id="contact">
@@ -61,7 +68,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 Kevin Tao</p>
     </footer>
 </body>
 </html>
