--- a/index.html
+++ b/index.html
@@ -1,74 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Website</title>
+    <title>My Website</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="Swordfinger.png">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Personal Website</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#experience">Work Experience</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>My name is Kevin Tao. I am a university student majoring in Computing Science in SFU, passionate about learning and continuously improving myself. I am proficient in Python and C++ programming and have strong communication and teamwork skills. I pay attention to detail, take initiative, and excel at problem-solving and adapting to dynamic work environments.</p>
-        <img src="profile.jpg" alt="Profile Picture">
-    </section>
-
-    <section id="projects">
-        <h2>My Projects</h2>
-        <ul>
-            <li><a href="https://github.com/your-username/project1" target="_blank">Project 1</a></li>
-            <li><a href="https://github.com/your-username/project2" target="_blank">Project 2</a></li>
-        </ul>
-    </section>
-
-    <section id="skills">
-        <h2>Skills</h2>
-        <p>I have experience in programming with C++ and Python. Additionally, I have achieved an IELTS score of 7 and have received first-place awards in microcontroller competitions as well as participated in various programming and mathematics competitions.</p>
-    </section>
-
-    <section id="experience">
-        <h2>Work Experience</h2>
-        <p>From 2019 to 2021, I worked as a Hardware Processing Specialist at BC Tech in Vancouver, British Columbia, Canada. My responsibilities included:</p>
-        <ul>
-            <li>Managing and coordinating project progress to ensure timely delivery of results.</li>
-            <li>Collaborating closely with team members to solve technical challenges.</li>
-            <li>Participating in hardware product development and testing to improve product quality and user experience.</li>
-        </ul>
-        <p>During my time at BC Tech, I gained valuable experience in hardware and computing, enhancing my communication and problem-solving skills while adapting to a fast-changing work environment.</p>
-    </section>
-
-    <section id="education">
-        <h2>Education</h2>
-        <p>Currently pursuing a Bachelor of Science degree in Computer Science at Simon Fraser University (2022-2026), located in Vancouver, British Columbia, Canada.</p>
-        <p>Graduated from Moscrop Secondary School (2016-2022), also in Vancouver, British Columbia, Canada.</p>
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <ul>
-            <li><a href="https://linkedin.com/in/your-username" target="_blank">LinkedIn</a></li>
-            <li><a href="https://github.com/your-username" target="_blank">GitHub</a></li>
-            <li><a href="mailto:your-email@example.com">Email</a></li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 Kevin Tao</p>
-    </footer>
+    <h1>Welcome to my Website</h1>
+    <p>Hello World</p>
 </body>
 </html>
