Added Skills section (#4)

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
             <ul>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="about">
+        <img src="your-profile-image.jpg" alt="Kevin Tao Profile Picture" style="width:150px; height:auto; border-radius:50%;">
         <h2>About Me</h2>
         <p>My name is Kevin Tao. I am a university student majoring in Computing Science in SFU, passionate about learning and continuously improving myself. I am proficient in Python and C++ programming and have strong communication and teamwork skills. I pay attention to detail, take initiative, and excel at problem-solving and adapting to dynamic work environments.</p>
         <img src="profile.jpg" alt="Profile Picture">
@@ -29,6 +31,16 @@
         <p>SkyFare is a project developed by our team as part of CMPT 276 in Spring 2025. It is designed to enhance the flight booking experience with smart recommendations and user-friendly UI.</p>
         <ul>
             <li><a href="https://github.com/CMPT-276-SPRING-2025/final-project-19-leafs.git" target="_blank">SkyFare - GitHub Repository</a></li>
+        </ul>
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Programming Languages: Python, C++</li>
+            <li>Tools: Git, GitHub, VSCode, VS Studio, Xcode</li>
+            <li>Problem Solving & Algorithms</li>
+            <li>Team Collaboration & Communication</li>
         </ul>
     </section>
 
