Added Work Experience section (#5)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
+                <li><a href="#experience">Work Experience</a></li>
             </ul>
         </nav>
     </header>
@@ -41,6 +42,20 @@
             <li>Tools: Git, GitHub, VSCode, VS Studio, Xcode</li>
             <li>Problem Solving & Algorithms</li>
             <li>Team Collaboration & Communication</li>
+        </ul>
+    </section>
+
+    <section id="experience">
+        <h2>Work Experience</h2>
+        <ul>
+            <li>
+                <strong>Hardware Processing - BC Tech</strong> (2019 - 2021)
+                <ul>
+                    <li>Managed and coordinated project progress to ensure timely delivery.</li>
+                    <li>Collaborated closely with team members to solve technical challenges.</li>
+                    <li>Participated in hardware product development and testing to improve product quality and user experience.</li>
+                </ul>
+            </li>
         </ul>
     </section>
 
