--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
     <header>
@@ -21,10 +21,9 @@
     </header>
 
     <section id="about">
-        <img src="your-profile-image.jpg" alt="Kevin Tao Profile Picture" style="width:150px; height:auto; border-radius:50%;">
+        <img src="images/profile.jpg" alt="Kevin Tao Profile Picture" style="width:150px; height:auto; border-radius:50%;">
         <h2>About Me</h2>
         <p>My name is Kevin Tao. I am a university student majoring in Computing Science in SFU, passionate about learning and continuously improving myself. I am proficient in Python and C++ programming and have strong communication and teamwork skills. I pay attention to detail, take initiative, and excel at problem-solving and adapting to dynamic work environments.</p>
-        <img src="profile.jpg" alt="Profile Picture">
     </section>
 
     <section id="projects">
