Finalized Education section (#6)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#experience">Work Experience</a></li>
+                <li><a href="#education">Education</a></li>
             </ul>
         </nav>
     </header>
@@ -53,6 +54,25 @@
                     <li>Managed and coordinated project progress to ensure timely delivery.</li>
                     <li>Collaborated closely with team members to solve technical challenges.</li>
                     <li>Participated in hardware product development and testing to improve product quality and user experience.</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
+    <section id="education">
+        <h2>Education</h2>
+        <ul>
+            <li>
+                <strong>Simon Fraser University</strong> (2022 - 2026)
+                <ul>
+                    <li>Bachelor of Science in Computing Science</li>
+                    <li>Located in Vancouver, British Columbia, Canada</li>
+                </ul>
+            </li>
+            <li>
+                <strong>Moscrop Secondary School</strong> (2016 - 2022)
+                <ul>
+                    <li>Graduated with distinction</li>
                 </ul>
             </li>
         </ul>
