--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#experience">Work Experience</a></li>
                 <li><a href="#education">Education</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -75,6 +76,15 @@
                     <li>Graduated with distinction</li>
                 </ul>
             </li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>You can reach me via:</p>
+        <ul>
+            <li><img src="images/email-icon.png" alt="Email Icon" style="width:20px; vertical-align:middle;"> Email: <a href="mailto:taokavin628@gmail.com">taokavin628@gmail.com</a></li>
+                        <li><img src="images/github-icon.png" alt="GitHub Icon" style="width:20px; vertical-align:middle;"> GitHub: <a href="https://github.com/Swordfinger" target="_blank">GitHub Profile</a></li>
         </ul>
     </section>
 
