Readded the button for contact

--- a/index.html
+++ b/index.html
@@ -129,10 +129,14 @@
         <div class="container">
             <h2>Contact</h2>
             <p>You can reach me via:</p>
-            <ul>
-                <li><img src="images/email-icon.png" alt="Email Icon" class="icon"> Email: <a href="mailto:taokavin628@gmail.com">taokavin628@gmail.com</a></li>
-                <li><img src="images/github-icon.png" alt="GitHub Icon" class="icon"> GitHub: <a href="https://github.com/Swordfinger" target="_blank">GitHub Profile</a></li>
-            </ul>
+            <div class="contact-list">
+                <a href="mailto:taokavin628@gmail.com" class="contact-btn">
+                    <img src="images/email-icon.png" alt="Email Icon"> Email: taokavin628@gmail.com
+                </a>
+                <a href="https://github.com/Swordfinger" target="_blank" class="contact-btn">
+                    <img src="images/github-icon.png" alt="GitHub Icon"> GitHub: Swordfinger
+                </a>
+            </div>
         </div>
     </section>
 
