adjusted picture size

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Personal Website</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
+    <style>
+        .hobby-img {
+            max-width: 300px;
+            height: auto;
+            display: block;
+            margin: 10px auto;
+            border-radius: 8px;
+        }
+        .travel-gallery {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+            flex-wrap: wrap;
+        }
+        .travel-gallery figure {
+            max-width: 300px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <header>
