Added more contentsin about me section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="container">
             <img src="images/profile.jpg" alt="Kevin Tao Profile Picture" class="profile-pic">
             <h2>About Me</h2>
-            <p>My name is Kevin Tao. I am a university student majoring in Computing Science in SFU, passionate about learning and continuously improving myself. I am proficient in Python and C++ programming and have strong communication and teamwork skills. I pay attention to detail, take initiative, and excel at problem-solving and adapting to dynamic work environments.</p>
+            <p>My name is Kevin Tao. I am a university student majoring in Computing Science at SFU. Originally from Beijing, I have been studying in Canada as an international student since 2016. I am passionate about learning and continuously improving myself. I am proficient in Python and C++ programming and still studying HTML, CSS, Java, and JavaScript and have strong communication and teamwork skills. I pay attention to detail, take initiative, and excel at problem-solving and adapting to dynamic work environments. Outside of academics, I enjoy playing video games, solving Rubik’s cubes, PCs, and travelling. These hobbies challenge me, help me unwind, and inspire my curiosity about technology and the world.</p>
         </div>
     </section>
 
