Added more Project in my Project section also updated some alt text in the hobby section photos

--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
             <ul>
                 <li><a href="https://github.com/CMPT-276-SPRING-2025/final-project-19-leafs.git" target="_blank">SkyFare - GitHub Repository</a></li>
             </ul>
+            <p>Lab 1 was one of the lab assignments for CMPT276, where I looked and studied some basic git commands and made some notes. I also looked at the software development life cycle.</p>
+            <ul>
+                <li><a href="https://github.com/Swordfinger/Kaiwen-Tao-Lab-1.git" target="_blank">CMPT276 Lab 1</a></li>
+            </ul>
+            <p>Lab 2 was one of the lab assignments for CMPT276 in which I read and analyzed Chapter 2 of The Mythical Man-Month. In addition, I researched and learned more basic git commands.</p>
+            <ul>
+                <li><a href="https://github.com/Swordfinger/Kaiwen-Tao-Lab-2.git" target="_blank">CMPT276 Lab 2</a></li>
+            </ul>
+            <p>Lab 3 was one of the lab assignments for CMPT276 in which I critiqued the user interfaces of 6 websites. I also researched and learned Nielsen's 10 usability heuristics and used them for heuristic evaluation. In addition to that, I researched and learned more basic git commands. </p>
+            <ul>
+                <li><a href="https://github.com/Swordfinger/Kaiwen-Tao-Lab-3.git" target="_blank">CMPT276 Lab 3</a></li>
+            </ul>
         </div>
     </section>
 
