--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -39,8 +39,8 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Kevin Tao</h1>
-                <h2>Computing Science Student</h2>
-                <p>A passionate Computing Science student at SFU with expertise in Python and C++, currently expanding my skills in web development. Strong problem-solver with excellent teamwork abilities.</p>
+                <h2>Major in SFU Computing Science | Faculty of Applied Sciences</h2>
+                <p></p>
                 <a href="#contact" class="btn">Get In Touch</a>
             </div>
         </div>
@@ -51,10 +51,10 @@
         <div class="container">
             <h2>About Me</h2>
             <div class="about-content">
-                <img src="https://via.placeholder.com/500x600" alt="Kevin Tao" class="profile-img">
+                <img src="images/profile.jpg" alt="Kevin Tao" class="profile-img">
                 <div class="about-text">
-                    <p>My name is Kevin Tao. I am a university student majoring in Computing Science at SFU. Originally from Beijing, I have been studying in Canada as an international student since 2016. I am passionate about learning and continuously improving myself.</p>
-                    <p>I am proficient in Python and C++ programming and still studying HTML, CSS, Java, and JavaScript and have strong communication and teamwork skills. I pay attention to detail, take initiative, and excel at problem-solving and adapting to dynamic work environments.</p>
+                    <p>My name is Kevin Tao. I am a university student majoring in Computing Science at SFU. Originally from Beijing, China, I have been studying in Canada as an international student since 2016.</p>
+                    <p>I am proficient in Python and C++ programming and have strong communication and teamwork skills, well able to participate effectively in agile development within any technical team. I pay attention to detail, take initiative, and excel at problem-solving and adapting to dynamic work environments.</p>
                     <p>Outside of academics, I enjoy playing video games, solving Rubik's cubes, PCs, and travelling. These hobbies challenge me, help me unwind, and inspire my curiosity about technology and the world.</p>
                 </div>
             </div>
